# hermes-saas

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: auth.py  chat.py  clients.py  companies.py  dashboard.py  profiles.py  skills.py  souls.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  company.py  models.py  user.py
backend/app/services/: hermes_runner.py  openrouter.py  soul_resolver.py
docs/: SPEC.md  schema.sql
frontend/: package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/clients/: page.tsx
frontend/src/app/dashboard/profiles/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/skills/: page.tsx
frontend/src/app/dashboard/souls/: page.tsx
frontend/src/app/dashboard/users/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts
