[project]
name = "hermes-saas"
version = "0.1.0"
description = "Hermes SaaS — Plataforma de Agentes Multi-tenant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "asyncio-mqtt>=0.16.0",
]

[project.scripts]
hermes-saas = "main:app"

[tool.hermes-saas]
# Path to hermes CLI binary (must be installed on the host)
hermes-binary = "/home/ubuntu/.local/bin/hermes"
# Base directory for profile state per company
profiles-root = "~/.hermes-saas/profiles"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
